# WorkHorz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FUNDING.yml  README.md  vcpkg.json  whz_config.json  workhorz_description.md
.devcontainer/: Dockerfile  devcontainer-list_20240927.txt  devcontainer.json
docs/: Doxyfile
frontend/example-blog-tailwind/: README.md  index.html  package-lock.json  package.json
publish/workhorz-web/: 404.html  index.html  package-lock.json
publish/workhorz-web/css/: style.css
publish/workhorz-web/js/: app.js
src/: LocalizationManager.cpp  LocalizationManager.hpp  ResourceType.hpp  Resources.cpp  Resources.hpp  http_routing.cpp  http_routing.hpp  templateCache.cpp  templateCache.h  whz-core.cpp  whz-quill-wrapper.hpp  whzClientRequest.cpp  whzClientRequest.h  whzClientRequest.hpp  whz_LUA_api.cpp  whz_LUA_api.h  whz_LUA_api.hpp  whz_LUA_core.cpp  whz_LUA_core.hpp  whz_common.cpp  whz_common.hpp  whz_config.cpp  whz_config.hpp  whz_config.json  whz_connection.cpp  whz_connection.hpp  whz_datacompression.cpp  whz_datacompression.hpp  whz_encryption.cpp  whz_encryption.hpp  whz_http_routing.cpp  whz_http_routing.hpp  whz_io_context_pool.cpp  whz_io_context_pool.hpp  whz_qrcode_generator.cpp  whz_qrcode_generator.hpp  whz_quill_wrapper.cpp  whz_quill_wrapper.hpp  whz_renderer.cpp  whz_renderer.hpp  (+22 more)
tests/: factorial.cpp
